[project]
name = "itk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.6",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "waitress>=3.0.2",
]
